--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>UI</title>
+<title>index</title>
 <!-- write your code here -->
 <style>
   #animation_container {
@@ -75,3 +75,4 @@ function handleComplete(evt,comp) {
 	</div>
 </body>
 </html>
+
